Update project description.
Signed-off-by: chenkun <chenkun_lws@126.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "crabvm"
 version = "0.0.1"
 edition = "2021"
+description = "A Java Virtual Machine (JVM) created as a learning tool using the Rust programming language, designed for individuals to learn and master Rust, as well as to gain in-depth knowledge of the JVM."
 
 [dependencies]
 
