--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
-[package]
-name = "crabvm"
+[workspace]
+resolver = "2"
+members = [
+    "crates/*",
+]
+
+[workspace.package]
 version = "0.0.1"
 edition = "2021"
-description = "A Java Virtual Machine (JVM) created as a learning tool using the Rust programming language, designed for individuals to learn and master Rust, as well as to gain in-depth knowledge of the JVM."
 
-[dependencies]
+[workspace.dependencies]
 
 [profile.release]
 lto = true
